--- a/FCP/README
+++ b/FCP/README
@@ -1,7 +1,7 @@
 Classifying short genomic fragments from novel lineages 
 using composition and homology.
 
-Version: 1.0.3
+Version: 1.0.4
 
 *** AVAILABILITY ***
 
@@ -100,7 +100,7 @@ Optional parameters:
   -v <integer>  Level of output information (default = 1).
 
 Typical usage:
-  > nb-classify -q test.fasta -m ./models/models.txt -r nb_results.txt
+  > nb-classify -q test.fasta -m models.txt -r nb_results.txt
   
 You must have a directory named 'nb-temp-results' below the path of nb-classify.
 
@@ -134,7 +134,7 @@ Required parameters:
   <results-file>    File to write classification results to.
 
 Typical usage:
-  > ./nb-classify -q test.fasta -m ./models/models.txt -r nb_results.txt
+  > ./nb-classify -q test.fasta -m models.txt -r nb_results.txt
   > python BLASTN.py /path/to/blastn test.fasta blastn_results.txt
   > python NB-BL.py nb_results.txt blastn_results.txt nb-bl_results.txt
 
@@ -155,7 +155,7 @@ Required parameters:
   <results-file>  File to write classification results to.
 
 Typical usage:
-  > ./nb-classify -q test.fasta -m ./models/models.txt -r nb_results.txt
+  > ./nb-classify -q test.fasta -m models.txt -r nb_results.txt
   > python Epsilon-NB.py nb_results.txt 1E10 epsilon-nb_results.txt
 
 
@@ -197,7 +197,7 @@ Required parameters:
   <results-file>    File to write classification results to.
 
 Typical usage:
-  > ./nb-classify -q test.fasta -m ./models/models.txt -r nb_results.txt
+  > ./nb-classify -q test.fasta -m models.txt -r nb_results.txt
   > python BLASTN.py /path/to/blastn test.fasta blastn_results.txt
   > python LCA+Epsilon-NB.py blastn_results.txt nb_results.txt 1E-5 15 1E10 lca+epsilon-nb_results.txt
 
@@ -222,33 +222,16 @@ the results file through Epsilon-NB.py with epsilon set to 0 or LCA.py with the 
 set to 0, respectively.
 
 Typical usage:
-  > ./nb-classify -q test.fasta -m ./models/models.txt -r nb_results.txt
+  > ./nb-classify -q test.fasta -m models.txt -r nb_results.txt
   > python Epsilon-NB.py nb_results.txt 0.0 nb_topModels.txt
   > python TaxonomicSummary.py test.fasta nb_topModels.txt nb_taxonomicSummary.txt
 
-   
-*** CHANGING N-MER LENGTH ***
- 
-The length of n-mers being used can be changed using the nb-train executable
-in the nb-train directory (nb-train-windows.exe on Microsoft Windows systems):
-  > ./nb-train [options] -t <taxonomy-file> -s <sequence-file> -m <model-dir>
-
-Required parameters:
-  <taxonomy-file>  File indicating taxonomic information for each sequence within <sequence-file>.
-  <sequence-file>  File listing path to each FASTA file for which a model shoud be built.
-  <model-dir>      Directory to store models.
-
-Optional parameters:
-  --help        Print help message.
-  --version     Print version information.
-  --contact     Print contact information.
-  -n <integer>  Desired oligonucleotide length (default = 10).
-
-Typical usage:
-  > nb-train -t ./taxonomy.txt -s ./training/sequences.txt -m ./models/genomes/
-
 
 *** ADDING NEW MODELS ***
+
+New models can be added to those built during the FCP install using the
+script AddModels.py (see below). If you wish to use the naive Bayes 
+classified indepedent of FCP, see the example directory.
 
 To build a new model, run the script AddModel.py:
   > python AddModel.py <N> <sequence-file> <domain> <phylum> <class> <order> <family> <genus> <species> <strain>
@@ -276,6 +259,25 @@ If you wish new models to be considered by BLASTN you must run BuildBlastDB.py:
 
 This only needs to be run once after adding in a collection of new models.
 
+
+*** CHANGING N-MER LENGTH ***
+ 
+The length of n-mers being used can be changed using the nb-train executable
+in the nb-train directory (nb-train-windows.exe on Microsoft Windows systems):
+  > ./nb-train [options] -s <sequence-file> -m <model-dir>
+
+Required parameters:
+  <sequence-file>  File listing path to each FASTA file for which a model shoud be built.
+  <model-dir>      Directory to store models.
+
+Optional parameters:
+  --help        Print help message.
+  --version     Print version information.
+  --contact     Print contact information.
+  -n <integer>  Desired oligonucleotide length (default = 10).
+
+Typical usage:
+  > nb-train -s sequences.txt -m ./models/
 
 *** HOW TO PARALLELIZE CLASSIFICATION ***
 
